--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,6 @@ FEISHU_ENCRYPT_KEY=
 
 # 机器人配置
 BOT_NAME=AI-Bot
-BOT_USER_ID=
 
 # 数据库配置
 DATABASE_URL=postgresql+asyncpg://username:password@host:port/database
@@ -15,6 +14,12 @@ DATABASE_URL=postgresql+asyncpg://username:password@host:port/database
 LLM_BASE_URL=https://api.openai.com/v1
 LLM_API_KEY=your_api_key_here
 LLM_MODEL=gpt-4o-mini
+
+# 小模型配置
+SMALL_MODEL_BASE_URL=https://api.openai.com/v1
+SMALL_MODEL_API_KEY=your_small_model_api_key_here
+SMALL_MODEL=gpt-4o-mini
+SMALL_MODEL_TIMEOUT=10
 
 # 绘图模型配置
 IMAGE_MODEL_BASE_URL=https://api.openai.com/v1
