--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ fastapi==0.115.5
 uvicorn[standard]==0.32.0
 httpx==0.27.2
 python-dotenv==1.0.1
+pydantic==2.9.2
+pydantic-settings==2.6.1
 apscheduler==3.10.4
 SQLAlchemy[asyncio]==2.0.36
 asyncpg==0.30.0
